# tsxlib-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  code_cov.sh  config.toml
examples/: README.md  benchmark.rs  simplestreamer.rs
src/: data_elements.rs  index.rs  joins.rs  lib.rs  timeseries.rs  timeseries_iterators.rs  timeutils.rs
src/algo/: chrono_utils.rs  int_utils.rs  macros.rs  mod.rs
src/io/: csv.rs  json.rs  mod.rs  parquet.rs  streaming.rs
testdata/: large_struct.json
