[package]
name = "tsxlib"
version = "0.1.1"
authors = ["beignetbytes <beignetbytes@gmail.com>"]
description = "timeseries library"
keywords = ["timeseries","analysis","data"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/binarybytes11/tsxlib-rs"
homepage = "https://github.com/binarybytes11/tsxlib-rs"
documentation = "https://docs.rs/tsxlib/latest/tsxlib/"
readme = "README.md"
edition = "2018"
exclude = [
    "testdata/*",
    "code_cov.sh",
    "config.toml",
]

[dependencies]
serde = { version = ">=1.0.0", features = ["derive"] }
chrono = { version = ">=0.4.0", features = ["serde"] }
csv = ">=1.0"
itertools = ">=0.9.0"
serde_json = { version = ">=1.0.0", optional = true }
parquet = { version = ">=1.0.0" , optional = true }
bincode = { version = ">=1.0.0" , optional = true }
seahash = { version = ">=4.0.0" , optional = true }

[features]
default = []
parq = ["parquet"]
json = ["serde_json"]
hash_precompare = ["bincode","seahash"]

[dev-dependencies]
bincode = "1.3.1"
rayon = "1.5.0"
rand = "0.8.0"


[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

